test/spec_vectors/exports/ok/module_32.wat
(module (export "a" (global $a)) (global $a i32 (i32.const 0)))